Thu Nov 20 20:09:46 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Made debug logging conditional on DCPS_debug_level.

Thu Nov 20 19:37:43 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fix C++ STL usage to be compatible with the old version on SunCC.

Thu Nov 20 18:44:09 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:
        * docs/design/TRANSPORT_RECONNECT:
        * tests/DCPS/BuiltInTopic/main.cpp:

          Fixed some spelling.

        * tests/DCPS/Messenger/run_ns_test.pl:

          Changed test to use $PerlACE::wait_interval_for_process_creation
          when waiting for ns.ior file to be created.

Thu Nov 20 18:20:01 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/tcp/TcpConnection.cpp:

          Add some debug messages to handle_close() and the various
          reconnect paths.

Thu Nov 20 17:54:16 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h:

          Promote nested structs from protected to public, vc71 won't compile
          the TransportClient header when they are protected even though the
          friend declaration is present.

Thu Nov 20 17:11:19 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportClient.cpp:
        * dds/DCPS/transport/framework/TransportConfig.h:
        * dds/DCPS/transport/framework/TransportConfig.cpp:

          If the passive_connect_duration_ is set to 0, treat it as the
          default value of 60 seconds.  With the async_assoc changes,
          0 will cause the timer to expire immediately and fail the association.

Wed Nov 19 19:16:30 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch async_assoc which lets the association process,
          which sets up communication channels from matched writers to readers,